@@ -1,3 +1,8 @@
+OpenPAM ???							2020-07-??
+
+ - BUGFIX: Fix race condition in openpam_ttyconv(3) when used with
+   expect scripts.
+============================================================================
 OpenPAM Tabebuia						2019-02-24
 
  - BUGFIX: Fix off-by-one bug in pam_getenv(3) which was introduced in
